name:                diagrams-gtk
version:             0.6
synopsis:            Backend for rendering diagrams directly to GTK windows
description:         XXX
homepage:            http://projects.haskell.org/diagrams/
license:             BSD3
license-file:        LICENSE
author:              John Lato
maintainer:          diagrams-discuss@googlegroups.com
copyright:           John Lato
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-gtk.git

library
  exposed-modules:     Diagrams.Backend.Gtk
  build-depends:       base >= 4.2 && < 4.7, 
                       diagrams-lib ==0.6.*,
                       diagrams-cairo ==0.6.*, 
                       gtk >= 0.12.0 && < 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010